$Id: History,v 1.19 2001-09-19 12:30:35 maire Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
     
19 sep 01: mma (muons-V03-02-04)
- come back to previous process name "MuIoni"
     
17 sep 01: mma (muons-V03-02-03)
- modifs in all classes for the migration of Materials to pure STL,
  but backward compatible with g4rw
        
13 sep 01: L/Urban (muons-V03-02-02)
-G4VxEnergyLoss: min.delta cut is set as rcut/100 + some optimisation
      
11 sep 01: L.Urban (muons-V03-02-01)
- G4VMuEnergyLoss: subcutoff delta-rays mechanism implemented     
     
29 aug 01: mma (muons-V03-02-00)
- G4MuIonisation: new function ComputeRestrictedMeandEdx() + 'cleanup'     
     
10 aug 01: mma
- store/retrieve PhysicsTables implemented in MuIonis, MuBrems, MuPairProd

29 may 01: V.Ivanchenko 
- clean up againist Linux ANSI strict compilation mode.

23 mar 01 L.Urban (muons-V03-00-05)
- R.Kokoulin's correction to energy loss has been commented out
  in G4MuIonisation.cc
     
05 mar 01 mma (muons-V03-00-04)
- new subdirectory: integral
  migration of all G4I.. processes from muons, standard, utils into integral

05 feb 01: G. Cosmo (muons-V03-00-02)
- STL migration for G4OrderedTable and G4DataVector.