@@ -1,4 +1,4 @@
-$Id: History,v 1.19 2001-09-19 12:30:35 maire Exp $
+$Id: History,v 1.20 2001-09-20 10:38:43 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -17,6 +17,10 @@ committal in the CVS repository !
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
      
+20 sep 01: L.Urban (muons-V03-02-05)
+- in MuPairProduction::ComputeMicroscopicCrossSection, remove:
+  if(MaxPairEnergy<CutInPairEnergy) MaxPairEnergy=CutInPairEnergy
+       
 19 sep 01: mma (muons-V03-02-04)
 - come back to previous process name "MuIoni"
      
